@@ -9,7 +9,7 @@ redirect_from:
 _This documentation was generated from source by running:_
 
 ```
-clojure -M:ee:run environment-variables-documentation
+clojure -M:ee:doc environment-variables-documentation
 ```
 
 Many settings in Metabase can be viewed and modified in the Admin Panel, or set via environment variables. The environment variables always take precedence. Note that, unlike settings configured in the Admin settings of your Metabase, the environment variables won't get written into the application database.
@@ -28,7 +28,7 @@ $env:MB_SITE_NAME="Awesome Company"
 # Windows batch/cmd
 set MB_SITE_NAME="Awesome Company"
 
-java -jar metabase.jar
+java --add-opens java.base/java.nio=ALL-UNNAMED -jar metabase.jar
 ```
 
 Or set it as Java property, which works the same across all systems:
@@ -69,6 +69,36 @@ Must be less than 1048575. This environment variable also affects how many rows 
   This environment variable also affects how many rows Metabase includes in dashboard subscription attachments.
   See also MB_UNAGGREGATED_QUERY_ROW_LIMIT.
 
+### `MB_ALLOWED_IFRAME_HOSTS`
+
+- Type: string
+- Default: `youtube.com,
+youtu.be,
+loom.com,
+vimeo.com,
+docs.google.com,
+calendar.google.com,
+airtable.com,
+typeform.com,
+canva.com,
+codepen.io,
+figma.com,
+grafana.com,
+miro.com,
+excalidraw.com,
+notion.com,
+atlassian.com,
+trello.com,
+asana.com,
+gist.github.com,
+linkedin.com,
+twitter.com,
+x.com`
+- [Exported as](../installation-and-operation/serialization.md): `allowed-iframe-hosts`.
+- [Configuration file name](./config-file.md): `allowed-iframe-hosts`
+
+Allowed iframe hosts.
+
 ### `MB_ANON_TRACKING_ENABLED`
 
 - Type: boolean
@@ -76,17 +106,6 @@ Must be less than 1048575. This environment variable also affects how many rows 
 - [Configuration file name](./config-file.md): `anon-tracking-enabled`
 
 Enable the collection of anonymous usage data in order to help Metabase improve.
-
-### `MB_API_KEY`
-
-- Type: string
-- Default: `null`
-
-When set, this API key is required for all API requests.
-
-Middleware that enforces validation of the client via the request header X-Metabase-Apikey.
-        If the header is available, then it’s validated against MB_API_KEY.
-        When it matches, the request continues; otherwise it’s blocked with a 403 Forbidden response.
 
 ### `MB_APPLICATION_COLORS`
 
@@ -300,7 +319,7 @@ Timeout in milliseconds for connecting to databases, both Metabase application d
 ### `MB_DB_QUERY_TIMEOUT_MINUTES`
 
 - Type: integer
-- Default: `3`
+- Default: `20`
 
 By default, this is 20 minutes.
 
@@ -411,15 +430,25 @@ SMTP secure connection protocol. (tls, ssl, starttls, or none).
 
 SMTP username.
 
-### `MB_EMBEDDING_APP_ORIGIN`
+### `MB_EMBEDDING_APP_ORIGINS_INTERACTIVE`
 
 > Only available on Metabase [Pro](https://www.metabase.com/product/pro) and [Enterprise](https://www.metabase.com/product/enterprise) plans.
 
 - Type: string
 - Default: `null`
-- [Configuration file name](./config-file.md): `embedding-app-origin`
+- [Configuration file name](./config-file.md): `embedding-app-origins-interactive`
 
-Allow this origin to embed the full Metabase application.
+Allow these space delimited origins to embed Metabase interactive.
+
+### `MB_EMBEDDING_APP_ORIGINS_SDK`
+
+> Only available on Metabase [Pro](https://www.metabase.com/product/pro) and [Enterprise](https://www.metabase.com/product/enterprise) plans.
+
+- Type: string
+- Default: `localhost:*`
+- [Configuration file name](./config-file.md): `embedding-app-origins-sdk`
+
+Allow Metabase SDK access to these space delimited origins.
 
 ### `MB_EMBEDDING_HOMEPAGE`
 
@@ -438,14 +467,29 @@ Embedding homepage status, indicating if its visible, hidden or has been dismiss
 
 Secret key used to sign JSON Web Tokens for requests to `/api/embed` endpoints.
 
-### `MB_ENABLE_EMBEDDING`
+### `MB_ENABLE_EMBEDDING_INTERACTIVE`
 
 - Type: boolean
 - Default: `false`
-- [Exported as](../installation-and-operation/serialization.md): `enable-embedding`.
-- [Configuration file name](./config-file.md): `enable-embedding`
+- [Configuration file name](./config-file.md): `enable-embedding-interactive`
 
-Allow admins to securely embed questions and dashboards within other applications?
+Allow admins to embed Metabase via interactive embedding?
+
+### `MB_ENABLE_EMBEDDING_SDK`
+
+- Type: boolean
+- Default: `false`
+- [Configuration file name](./config-file.md): `enable-embedding-sdk`
+
+Allow admins to embed Metabase via the SDK?
+
+### `MB_ENABLE_EMBEDDING_STATIC`
+
+- Type: boolean
+- Default: `false`
+- [Configuration file name](./config-file.md): `enable-embedding-static`
+
+Allow admins to embed Metabase via static embedding?
 
 ### `MB_ENABLE_PASSWORD_LOGIN`
 
@@ -1010,6 +1054,13 @@ By default "Site Url" is used in notification links, but can be overridden.
 The base URL where dashboard notitification links will point to instead of the Metabase base URL.
         Only applicable for users who utilize interactive embedding and subscriptions.
 
+### `MB_NOTIFICATION_THREAD_POOL_SIZE`
+
+- Type: integer
+- Default: `10`
+
+The size of the thread pool used to send notifications.
+
 ### `MB_NUM_METABOT_CHOICES`
 
 - Type: integer
@@ -1352,7 +1403,7 @@ Should new email notifications be sent to admins, for all new SSO users?
 Value for the session cookies `SameSite` directive.
 
 See [Embedding Metabase in a different domain](../embedding/interactive-embedding.md#embedding-metabase-in-a-different-domain).
-        Related to [MB_EMBEDDING_APP_ORIGIN](#mb_embedding_app_origin). Read more about [interactive Embedding](../embedding/interactive-embedding.md).
+        Read more about [interactive Embedding](../embedding/interactive-embedding.md).
         Learn more about [SameSite cookies](https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Set-Cookie/SameSite).
 
 ### `MB_SESSION_COOKIES`
@@ -1585,7 +1636,7 @@ Must be less than 1048575, and less than the number configured in MB_AGGREGATED_
 - [Exported as](../installation-and-operation/serialization.md): `update-channel`.
 - [Configuration file name](./config-file.md): `update-channel`
 
-Metabase will notify you when a new release is available for the channel you select.
+Well notify you here when theres a new version of this type of release.
 
 ### `MB_UPLOADS_SETTINGS`
 
@@ -1828,6 +1879,20 @@ This variable affects connections that are severed and undetected by Metabase (t
 
 Unless set otherwise, the default production value for `metabase.query-processor.query-timeout-ms` is used which is 1,200,000 ms (i.e. 1,200 seconds or 20 minutes).
 
+### `MB_JDBC_DATA_WAREHOUSE_DEBUG_UNRETURNED_CONNECTION_STACK_TRACES`
+
+Type: boolean<br>
+Default: `false`<br>
+Since: v51.3
+
+If `true`, log a stack trace for any connections killed due to exceeding the timeout specified in [MB_JDBC_DATA_WAREHOUSE_UNRETURNED_CONNECTION_TIMEOUT_SECONDS](#mb_jdbc_data_warehouse_unreturned_connection_timeout_seconds).
+
+Note: In addtion to enabling this variable, you need to update the com.mchange log level to INFO or higher via a custom log4j configuration in order to see the stack traces in the logs.
+
+See the [Metabase log configuration](./log-configuration.md) documentation for how to configure log levels.
+
+See [MB_JDBC_DATA_WAREHOUSE_UNRETURNED_CONNECTION_TIMEOUT_SECONDS](#mb_jdbc_data_warehouse_unreturned_connection_timeout_seconds) for setting the timeout after which connections will be killed.
+
 ### `MB_JETTY_ASYNC_RESPONSE_TIMEOUT`
 
 Type: integer<br>
@@ -1965,6 +2030,13 @@ Default: True
 
 If you want to exclude the [Metabase analytics](../usage-and-performance-tools/usage-analytics.md) collection, you can set `MB_LOAD_ANALYTICS_CONTENT=false`. Setting this environment variable to false can also come in handy when migrating environments, as it can simplify the migration process.
 
+### `MB_LOAD_SAMPLE_CONTENT`
+
+Type: Boolean<br>
+Default: True
+
+Whether to include the Sample Database in your Metabase. To exclude the Sample Database, set `MB_LOAD_SAMPLE_CONTENT=false`.
+
 ### `MB_NO_SURVEYS`
 
 Type: boolean<br>
@@ -2056,29 +2128,6 @@ Default: `true`
 
 Send email notifications to users in Admin group, when a new SSO users is created on Metabase.
 
-### `MB_SESSION_COOKIE_SAMESITE`
-
-Only available on Metabase [Pro](https://www.metabase.com/product/pro) and [Enterprise](https://www.metabase.com/product/enterprise) plans.<br>
-Type: string (`"none"`, `"lax"`, `"strict"`)<br>
-Default: `"lax"`
-
-See [Embedding Metabase in a different domain](../embedding/interactive-embedding.md#embedding-metabase-in-a-different-domain).
-
-Related to [MB_EMBEDDING_APP_ORIGIN](#mb_embedding_app_origin). Read more about [interactive Embedding](../embedding/interactive-embedding.md).
-
-Learn more about SameSite cookies: https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Set-Cookie/SameSite
-
-### `MB_SESSION_COOKIES`
-
-Type: boolean<br>
-Default: `null`
-
-When set to `true`, the user login session will expire when the browser is closed. The user login session will always expire after the amount of time defined in [MAX_SESSION_AGE](#max_session_age) (by default 2 weeks).
-
-This overrides the "Remember me" checkbox when logging in.
-
-Also see the [Changing session expiration](../people-and-groups/changing-session-expiration.md) documentation page.
-
 ### `MB_SETUP_TOKEN`
 
 Type: string<br>
@@ -2116,4 +2165,3 @@ Type: string<br>
 Default: `null`
 
 Base-64 encoded public key for this sites SSL certificate. Specify this to enable HTTP Public Key Pinning. Using HPKP is no longer recommended. See http://mzl.la/1EnfqBf for more information.
-
